objects/PLNDR__PLConnectorSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings used to connect to PrecisionLender and identify key fields in Salesforce that must be hashed when communicated to PrecisionLender</description>
    <fields>
        <fullName>PLNDR__Application_Url__c</fullName>
        <description>PrecisionLender instance URL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PLNDR__ClientApiKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClientApiKey</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__ClientId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClientId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Relationship_External_ID_Source__c</fullName>
        <description>The name of the Account field that corresponds to the Id for Relationships in the Relationship Awareness feed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship ID Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PrecisionLender Connector</label>
</CustomObject>